--- a/src/login/Login.css
+++ b/src/login/Login.css
@@ -15,7 +15,6 @@
     margin-left: 22%;
 }
 h2{
-    font: 2em sans-serif;
     font-weight: bold;
     color: black;
 }
@@ -47,8 +46,14 @@ h2{
 
 .Remember_Me {
     margin-left: -7%;
+    margin-top : 2%
 }
 
 .Other_Option{
     margin: 5% 0% 3% 22%;
+}
+
+.Google_Login{
+    width: 50% !important;
+    margin: 1% 3%  3% 27%;
 }
